--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
+    "jquery": "^3.2.1",
     "node-sass": "^4.5.0",
     "sass-loader": "^5.0.1",
     "style-loader": "^0.18.2",
+    "swiper": "^3.4.2",
     "vue-loader": "^12.1.0",
     "vue-router": "^2.7.0",
     "vue-template-compiler": "^2.3.3",
